Added polynomial class to python code.

--- a/Scripts/Python/Min_jerk_notebook.ipynb
+++ b/Scripts/Python/Min_jerk_notebook.ipynb
@@ -263,7 +263,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class polynomial:\n",
+    "\n",
+    "    #https://www.w3schools.com/python/python_classes.asp\n",
+    "\n",
+    "    def __init__(x0,dx0,ddx0,x1,dx1,ddx1,t):\n",
+    "        a0 = x0;\n",
+    "        a1 = dx0;\n",
+    "        a2 = ddx0 / 2;\n",
+    "        a3 = ( 20 * x1 - 20 * x0 - (8 * dx1 + 12 * dx0) * t - (3 * ddx0 - ddx1) * t^2)  / (2 * t^3);\n",
+    "        a4 = ( 30 * x0 - 30 * x1 + (14 * dx1 + 16 * dx0) * t + (3 * ddx0 - 2 * ddx1) * t^2 ) / (2 * t^4);\n",
+    "        a5 = ( 12 * x1 - 12 * x0 - (6 * dx1 + 6 * dx0) * t - (ddx0 - ddx1) * t^2 ) / (2 * t^5);\n",
+    "\n",
+    "        a = [a5, a4, a3, a2, a1, a0]\n",
+    "        num_steps = int(t/dt + 1)\n",
+    "\n",
+    "        # y = a5 * t^5 + a4 * t^4 + a3 * t^3 + a2 * t^2 + a1 * t + a0\n",
+    "        # Create arrays of zeros\n",
+    "        y = np.zeros((2, num_steps), dtype=np.int32)\n",
+    "        dy = np.zeros((2, num_steps), dtype=np.int32)\n",
+    "        ddy = np.zeros((2, num_steps), dtype=np.int32)\n",
+    "\n",
+    "        for i in range(len(y)):\n",
+    "              i_t = (i-1)*dt;\n",
+    "              y(i) = a(1) * i_t^5 + a(2) * i_t^4 + a(3) * i_t^3 + a(4) * i_t^2 + a(5) * i_t + a(6);\n",
+    "              dy(i) = 5 * a(1) * i_t^4 + 4 * a(2) * i_t^3 + 3 * a(3) * i_t^2 + 2 * a(4) * i_t + a(5);\n",
+    "              ddy(i) = 20 * a(1) * i_t^3 + 12 * a(2) * i_t^2 + 6 * a(3) * i_t + 2 * a(4);\n",
+    "\n",
+    "\n",
+    "                \n",
+    "\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
