--- a/Scripts/Python/Min_jerk_notebook.ipynb
+++ b/Scripts/Python/Min_jerk_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f52852aa640>]"
+       "[<matplotlib.lines.Line2D at 0x7f52843daca0>]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -260,26 +260,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 363,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n        num_steps = int(t/dt + 1)\\n        # Create arrays of zeros\\n        y = np.zeros((2, num_steps), dtype=np.int32)\\n        dy = np.zeros((2, num_steps), dtype=np.int32)\\n        ddy = np.zeros((2, num_steps), dtype=np.int32)\\n\\n        for i in range(len(y)):\\n              i_t = (i-1)*dt;\\n              y(i) = a(1) * i_t^5 + a(2) * i_t^4 + a(3) * i_t^3 + a(4) * i_t^2 + a(5) * i_t + a(6);\\n              dy(i) = 5 * a(1) * i_t^4 + 4 * a(2) * i_t^3 + 3 * a(3) * i_t^2 + 2 * a(4) * i_t + a(5);\\n              ddy(i) = 20 * a(1) * i_t^3 + 12 * a(2) * i_t^2 + 6 * a(3) * i_t + 2 * a(4);\\n'"
+      ]
+     },
+     "execution_count": 363,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class polynomial:\n",
     "\n",
     "    #https://www.w3schools.com/python/python_classes.asp\n",
     "\n",
-    "    def __init__(x0,dx0,ddx0,x1,dx1,ddx1,t):\n",
-    "        a0 = x0;\n",
-    "        a1 = dx0;\n",
-    "        a2 = ddx0 / 2;\n",
-    "        a3 = ( 20 * x1 - 20 * x0 - (8 * dx1 + 12 * dx0) * t - (3 * ddx0 - ddx1) * t^2)  / (2 * t^3);\n",
-    "        a4 = ( 30 * x0 - 30 * x1 + (14 * dx1 + 16 * dx0) * t + (3 * ddx0 - 2 * ddx1) * t^2 ) / (2 * t^4);\n",
-    "        a5 = ( 12 * x1 - 12 * x0 - (6 * dx1 + 6 * dx0) * t - (ddx0 - ddx1) * t^2 ) / (2 * t^5);\n",
+    "    def __init__(self,x0,dx0,ddx0,x1,dx1,ddx1,t,dt):\n",
+    "        \n",
+    "        x0 = np.asarray(x0)\n",
+    "        dx0 = np.asarray(dx0)\n",
+    "        ddx0 = np.asarray(ddx0)\n",
+    "        x1 = np.asarray(x1)\n",
+    "        dx1 = np.asarray(dx1)\n",
+    "        ddx1 = np.asarray(ddx1)\n",
+    "        self.dt = dt\n",
+    "        self.t = t\n",
+    "            \n",
+    "        \n",
+    "        a0 = np.asarray(x0)\n",
+    "        a1 = np.asarray(dx0)\n",
+    "        a2 = np.asarray(np.divide(ddx0 , 2))\n",
+    "        a3 =  (20 * x1 - 20 * x0 - (8 * dx1 + 12 * dx0) * t - (3 * ddx0 - ddx1) * t**2) / (2 * t**3)\n",
+    "        a4 =  (30 * x0 - 30 * x1 + (14 * dx1 + 16 * dx0) * t + (3 * ddx0 - 2 * ddx1) * t**2 ) / (2 * t**4)\n",
+    "        a5 =  (12 * x1 - 12 * x0 - (6 * dx1 + 6 * dx0) * t - (ddx0 - ddx1) * t**2 ) /  (2 * t**5)\n",
     "\n",
-    "        a = [a5, a4, a3, a2, a1, a0]\n",
+    "        self.a = [a5, a4, a3, a2, a1, a0]\n",
+    "\n",
+    "    def trajectory_at_time(self, t):\n",
+    "        \n",
+    "        a5 = np.asarray(self.a[0])\n",
+    "        a4 = np.asarray(self.a[1])\n",
+    "        a3 = np.asarray(self.a[2])\n",
+    "        a2 = np.asarray(self.a[3])\n",
+    "        a1 = np.asarray(self.a[4])\n",
+    "        a0 = np.asarray(self.a[5])\n",
+    "\n",
+    "\n",
+    "        y = a5 * t**5 + a4 * t**4 + a3 * t**3 + a2 * t**2 + a1 * t + a0\n",
+    "\n",
+    "        return y\n",
+    "    \n",
+    "    def whole_trajectory(self):\n",
+    "        #vector form 0 to t with number of elements t/dt\n",
+    "        time_split = np.linspace(0, self.t, int(self.t/self.dt))\n",
+    "\n",
+    "        #generates len(time_split)+1 array of 0\n",
+    "        trajectroy = [0]*(len(time_split)+1)  \n",
+    "        j = 0\n",
+    "        for i in time_split:\n",
+    "            trajectroy[j] = self.trajectory_at_time(i)\n",
+    "            j += 1\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
     "        num_steps = int(t/dt + 1)\n",
-    "\n",
-    "        # y = a5 * t^5 + a4 * t^4 + a3 * t^3 + a2 * t^2 + a1 * t + a0\n",
     "        # Create arrays of zeros\n",
     "        y = np.zeros((2, num_steps), dtype=np.int32)\n",
     "        dy = np.zeros((2, num_steps), dtype=np.int32)\n",
@@ -290,11 +338,28 @@
     "              y(i) = a(1) * i_t^5 + a(2) * i_t^4 + a(3) * i_t^3 + a(4) * i_t^2 + a(5) * i_t + a(6);\n",
     "              dy(i) = 5 * a(1) * i_t^4 + 4 * a(2) * i_t^3 + 3 * a(3) * i_t^2 + 2 * a(4) * i_t + a(5);\n",
     "              ddy(i) = 20 * a(1) * i_t^3 + 12 * a(2) * i_t^2 + 6 * a(3) * i_t + 2 * a(4);\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 7.]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_trajectory = polynomial([0,7],[0,0],[0,0],[10,3.14],[0,0],[0,0],3,0.01)\n",
+    "print(test_trajectory.trajectory_at_time(0))\n",
     "\n",
-    "\n",
-    "                \n",
-    "\n",
-    "    \n"
+    "print(test_trajectory.whole_trajectory())"
    ]
   }
  ],
