Added 3D plots vol1 doesn't work

--- a/Scripts/Python/Polynomial_min_jerk_calculation.ipynb
+++ b/Scripts/Python/Polynomial_min_jerk_calculation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,63 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34m||0|| \u001b[90m Pose: [10. 10.]|\u001b[32mVel : [nan nan] m/s | \u001b[31m Acc: [nan nan] | \u001b[36m Jerk: [nan nan]\n",
-      "\u001b[34m||1|| \u001b[90m Pose: 0|\u001b[32mVel : [-1000. -1000.] m/s | \u001b[31m Acc: [nan nan] | \u001b[36m Jerk: [nan nan]\n",
-      "\u001b[34m||2|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: [100000. 100000.] | \u001b[36m Jerk: [nan nan]\n",
-      "\u001b[34m||3|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: [-10000000. -10000000.]\n",
-      "\u001b[34m||4|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||5|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||6|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||7|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||8|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||9|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||10|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||11|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||12|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||13|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||14|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||15|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||16|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||17|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||18|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||19|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||20|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||21|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||22|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||23|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||24|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||25|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||26|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||27|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||28|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||29|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||30|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||31|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||32|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||33|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||34|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||35|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||36|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||37|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||38|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||39|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||40|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||41|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||42|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||43|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||44|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||45|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||46|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||47|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||48|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n",
-      "\u001b[34m||49|| \u001b[90m Pose: 0|\u001b[32mVel : 0.0 m/s | \u001b[31m Acc: 0.0 | \u001b[36m Jerk: 0.0\n"
+      "[]\n",
+      "[10.0]\n"
      ]
     },
     {
@@ -183,7 +135,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m aux_traj \u001b[39m=\u001b[39m []\n\u001b[1;32m     27\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m test_trajectory\u001b[39m.\u001b[39mtrajectory:\n\u001b[1;32m     28\u001b[0m     \u001b[39m#traj_plot.scatter(test_trajectory.time_split,i[1])\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m     aux_traj\u001b[39m.\u001b[39mappend(i[\u001b[39m0\u001b[39;49m])\n\u001b[1;32m     31\u001b[0m traj_plot\u001b[39m.\u001b[39mscatter(test_trajectory\u001b[39m.\u001b[39mtime_split, aux_traj)\n\u001b[1;32m     33\u001b[0m \u001b[39m#Velocity plot\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[6], line 31\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m test_trajectory\u001b[39m.\u001b[39mtrajectory:\n\u001b[1;32m     29\u001b[0m     \u001b[39m#traj_plot.scatter(test_trajectory.time_split,i[1])\u001b[39;00m\n\u001b[1;32m     30\u001b[0m     \u001b[39mprint\u001b[39m(aux_traj)\n\u001b[0;32m---> 31\u001b[0m     aux_traj\u001b[39m.\u001b[39mappend(i[\u001b[39m0\u001b[39;49m])\n\u001b[1;32m     33\u001b[0m traj_plot\u001b[39m.\u001b[39mscatter(test_trajectory\u001b[39m.\u001b[39mtime_split, aux_traj)\n\u001b[1;32m     35\u001b[0m \u001b[39m#Velocity plot\u001b[39;00m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
      ]
     },
@@ -221,12 +173,14 @@
     "\n",
     "    for index, i in enumerate(time):\n",
     "        #prints velocity and acceleration\n",
-    "        print(f\"{Fore.BLUE}||{index}|| {Fore.LIGHTBLACK_EX} Pose: {test_trajectory.trajectory[index]}|{Fore.GREEN}Vel : {test_trajectory.velocity[index]} m/s | {Fore.RED} Acc: {test_trajectory.acceleration[index]} | {Fore.CYAN} Jerk: {test_trajectory.jerk[index]}\")\n",
-    "\n",
+    "        #print(f\"{Fore.BLUE}||{index}|| {Fore.LIGHTBLACK_EX} Pose: {test_trajectory.trajectory[index]}|{Fore.GREEN}Vel : {test_trajectory.velocity[index]} m/s | {Fore.RED} Acc: {test_trajectory.acceleration[index]} | {Fore.CYAN} Jerk: {test_trajectory.jerk[index]}\")\n",
+    "        continue\n",
+    "    \n",
     "    #Trajectory plot\n",
     "    aux_traj = []\n",
     "    for i in test_trajectory.trajectory:\n",
     "        #traj_plot.scatter(test_trajectory.time_split,i[1])\n",
+    "        print(aux_traj)\n",
     "        aux_traj.append(i[0])\n",
     "\n",
     "    traj_plot.scatter(test_trajectory.time_split, aux_traj)\n",
